@@ -1,3 +1,5 @@
+2006/2/24 -- released version 20060224_trunk
+
 2006/2/23 -- released version 20060223_trunk
 
 2006/2/22 -- released version 20060222_trunk
